Fix workflow syntax error (again)

--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -2,9 +2,12 @@ name: Install
 on: push
 jobs:
   install:
+    name: Install on Ubuntu
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/setup-python@v2
+    - name: Setup Python
+      uses: actions/setup-python@v2
       with:
         python-version: '3.9.2'
+    - name: Install Package
       run: pip install git+https://github.com/viral32111/slashcommands
